@@ -1,3 +1,4 @@
 $(function(){
 	$(".chosen-select").chosen({allow_single_deselect:true});
+	$(".chosen-multiple-select").chosen({allow_single_deselect:true});
 });
